src/config/snapshots/http_dragonfly__config__headers__tests__deserialize_ok_header_transform-2.snap
---
source: src/config/headers.rs
expression: update_action
---
HeaderTransform(
  action: update("new_header"),
  value: Some("new_value"),
)
