src/config/snapshots/http_dragonfly__config__headers__tests__deserialize_ok_header_transform-3.snap
---
source: src/config/headers.rs
expression: drop_action
---
HeaderTransform(
  action: drop("old_header"),
  value: None,
)
