src/config/snapshots/http_dragonfly__config__headers__tests__deserialize_ok_header_transform.snap
---
source: src/config/headers.rs
expression: add_action
---
HeaderTransform(
  action: add("new_header"),
  value: Some("new_value"),
)
