src/config/snapshots/http_dragonfly__config__headers__tests__transforms-3.snap
---
source: src/config/headers.rs
expression: headers
---
{
    "x-header-to-drop": "wrong",
    "x-existing-header": "wrong",
    "x-header-without-changes": "good",
    "x-env-header-2": "wrong",
}
