src/config/snapshots/http_dragonfly__config__headers__tests__transforms.snap
---
source: src/config/headers.rs
expression: ctx
---
Context(
  own: {
    "CTX_APP_NAME": "http-dragonfly",
    "CTX_APP_VERSION": "0.5.1",
    "TEST_ENV_HEADER_TO_ADD": "TEST_ENV_HEADER_VALUE",
    "TEST_ENV_KEY": "TEST_ENV_VALUE",
  },
  parent: None,
)
